# matter-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CURIOSIDADES_DO_SISTEMA.md  CURRENT_STATE.md  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAP.md  EVOLUTION_TIMELINE.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_V3_1.md  FINAL_STATUS.md  FINAL_STATUS_v4.12.md  FINAL_SUMMARY.md  GAP_ANALYSIS.md  GITHUB_BACKUP_MATTER_CORE_0.1.0.md  INSTALACAO_COMPLETA.md  INSTALL_GUIDE.md  INSTALL_LLVM_QUICK.md  INVESTOR_PITCH_v4.12.md  LICENSE  LINGUAGEM_VIVA_E_CAPACIDADES.md  LOOP_BYTECODE_FIX.md  MATTER_ACHIEVEMENTS_FINAL.md  MATTER_ACHIEVEMENT_FINAL.md  MATTER_CAPABILITIES.md  MATTER_COMPILER_REVOLUTION.md  MATTER_COMPLETE_FINAL.md  MATTER_COMPLETE_REVOLUTIONARY.md  MATTER_CORE_100_PERCENT.md  MATTER_CORE_97_PERCENT.md  MATTER_CORE_COMPLETE.md  MATTER_CORE_V0.10.0.md  MATTER_CORE_V0.8.0_FINAL.md  MATTER_CORE_V0.9.0.md  MATTER_CORE_V1_FINAL_COMPLETE.md  (+155 more)
.cargo/: config.toml
.emnr/: baseline-index.json  bundle-index.json  current-bundle.json  paths.json  policy.json  state.json  status.md
.github/: pull_request_template.md
MatterZap/: app_nativo.matter  index.html  server.matter
MeuAppMatter/: app.matter  app_servidor.matter  atacante_massivo.py  benchmark_loops.matter  calculadora_primos.matter  cliente.matter  dashboard_analytics.html  destruicao_total.matter  edge_cases.matter  estresse_grafico.matter  gerador_dashboard.matter  gerar_profundo.py  inventario.matter  jogo_damas_ia.matter  limites_extremos.matter  limites_extremos_2.matter  lista_tarefas.matter  main_module.matter  module_a.matter  neuronio.matter  rede_neural.matter  rodar.ps1  servidor_massivo.matter  servidor_poliglota.matter  stress_test.matter  teste_array.matter  teste_integral.matter  teste_maximo.matter  teste_str.matter  teste_string.matter  validacao_completa.matter  webapp.matter
benchmarks/: BENCHMARK_RESULTS.md  README.md  backend_calls.matter  (+28 more)
core-lite/mc/: Cargo.toml
core-lite/mc/src/: main.rs
crates/matter-auto-parallel/: Cargo.toml
crates/matter-auto-parallel/src/: lib.rs
crates/matter-biological/: Cargo.toml
crates/matter-biological/src/: backend.rs  lib.rs
crates/matter-bridge-go/: Cargo.toml
crates/matter-bridge-go-native/: Cargo.toml  build.rs
crates/matter-bridge-go-native/src/: lib.rs  real.rs
crates/matter-bridge-go/src/: lib.rs
crates/matter-bridge-java/: Cargo.toml
crates/matter-bridge-java-native/: Cargo.toml  build.rs
crates/matter-bridge-java-native/src/: lib.rs  real.rs
crates/matter-bridge-java/src/: lib.rs
crates/matter-bridge-nodejs/: Cargo.toml
crates/matter-bridge-nodejs-native/: Cargo.toml
crates/matter-bridge-nodejs-native/src/: lib.rs
crates/matter-bridge-nodejs/src/: converter.rs  lib.rs
crates/matter-bridge-python/: Cargo.toml
crates/matter-bridge-python/src/: converter.rs  lib.rs
crates/matter-bridge-rust/: Cargo.toml
crates/matter-bridge-rust/src/: lib.rs
crates/matter-cli/: Cargo.toml
crates/matter-cli/src/: capability_policy.rs  fs_flags.rs  language_main.rs  main.rs
crates/matter-cli/src/commands/: inspect.rs  mod.rs  run.rs
crates/matter-compiler/: Cargo.toml
crates/matter-compiler/src/: lib.rs
crates/matter-crash-reporter/: Cargo.toml
crates/matter-crash-reporter/src/: lib.rs
crates/matter-debugger/: Cargo.toml
crates/matter-debugger/src/: lib.rs
crates/matter-deployment/: Cargo.toml
crates/matter-deployment/src/: lib.rs
crates/matter-distributed-cache/: Cargo.toml
crates/matter-distributed-cache/src/: lib.rs
crates/matter-genesis/: Cargo.toml
crates/matter-genesis/src/: backend.rs  lib.rs
crates/matter-hotreload/: Cargo.toml
crates/matter-hotreload/src/: lib.rs
crates/matter-jit/: Cargo.toml
crates/matter-jit/src/: cache.rs  compiler.rs  hot_path.rs  lib.rs  profiler.rs
crates/matter-leak-detector/: Cargo.toml
crates/matter-leak-detector/src/: lib.rs
crates/matter-llvm/: Cargo.toml  LLVM_SETUP.md  LLVM_WINDOWS_INSTALL.md
crates/matter-llvm/src/: lib.rs  real.rs
crates/matter-lsp/: Cargo.toml
crates/matter-lsp/src/: lib.rs  main.rs
crates/matter-memristive/: Cargo.toml
crates/matter-memristive/src/: backend.rs  lib.rs
crates/matter-native/: Cargo.toml  test_elf
crates/matter-native/src/: lib.rs
crates/matter-native/src/autopgo/: mod.rs
crates/matter-native/src/codegen/: arm64.rs  mod.rs  riscv64.rs  x86_64.rs
crates/matter-native/src/linker/: elf.rs  macho.rs  mod.rs  pe.rs
crates/matter-native/src/lto/: mod.rs
crates/matter-native/src/optimizer/: mod.rs
crates/matter-native/src/profiler/: mod.rs
crates/matter-native/src/runtime/: builtins.rs  mod.rs
crates/matter-native/src/simd/: arm64.rs  mod.rs  riscv64.rs  x86_64.rs
crates/matter-neuromorphic/: Cargo.toml
crates/matter-neuromorphic/src/: backend.rs  lib.rs
crates/matter-polyglot/: Cargo.toml
crates/matter-polyglot/src/: bridge.rs  lib.rs  parallel.rs  parser.rs  resolver.rs  types.rs
emnr/: Cargo.toml
emnr/crates/emnr-cli/: Cargo.toml
emnr/crates/emnr-cli/src/: main.rs
emnr/crates/emnr-core/: Cargo.toml
emnr/crates/emnr-core/src/: lib.rs
emnr/crates/emnr-energy/: Cargo.toml
emnr/crates/emnr-energy/src/: lib.rs
emnr/crates/emnr-matter-bridge/: Cargo.toml
emnr/crates/emnr-matter-bridge/src/: lib.rs
emnr/crates/emnr-memory/: Cargo.toml
emnr/crates/emnr-memory/src/: lib.rs
emnr/crates/emnr-molecule/: Cargo.toml
emnr/crates/emnr-molecule/src/: lib.rs
emnr/crates/emnr-region/: Cargo.toml
emnr/crates/emnr-region/src/: lib.rs
emnr/crates/emnr-runtime/: Cargo.toml
emnr/crates/emnr-runtime/src/: lib.rs
emnr/crates/emnr-tensor/: Cargo.toml
emnr/crates/emnr-tensor/src/: lib.rs
emnr/examples/: input_danger.json  input_neutral.json  input_reward.json  matter_emnr_gate_policy.json  matter_emnr_pipeline_policy.json  matter_event_optimize.json  matter_event_risky.json  matter_event_stream.json
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_compiler.rs  fuzz_lexer.rs  fuzz_parser.rs
(+1184 files in other folders)
