[workspace]
members = [
    "crates/emnr-core",
    "crates/emnr-tensor",
    "crates/emnr-molecule",
    "crates/emnr-energy",
    "crates/emnr-memory",
    "crates/emnr-matter-bridge",
    "crates/emnr-region",
    "crates/emnr-runtime",
    "crates/emnr-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

emnr-core = { path = "crates/emnr-core" }
emnr-energy = { path = "crates/emnr-energy" }
emnr-memory = { path = "crates/emnr-memory" }
emnr-matter-bridge = { path = "crates/emnr-matter-bridge" }
emnr-molecule = { path = "crates/emnr-molecule" }
emnr-region = { path = "crates/emnr-region" }
emnr-runtime = { path = "crates/emnr-runtime" }
emnr-tensor = { path = "crates/emnr-tensor" }
