[package]
name = "matter-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.matter-lexer]
path = "../crates/matter-lexer"

[dependencies.matter-parser]
path = "../crates/matter-parser"

[dependencies.matter-bytecode]
path = "../crates/matter-bytecode"

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_compiler"
path = "fuzz_targets/fuzz_compiler.rs"
test = false
doc = false
bench = false

# Standalone fuzz package (not a workspace member yet)
[workspace]
