[package]
name = "matter-auto-parallel"
version = "0.1.0"
edition = "2021"
authors = ["Matter Core Team"]
license = "MIT"

[dependencies]
matter-ast = { path = "../matter-ast" }
matter-backend = { path = "../matter-backend" }
matter-error = { path = "../matter-error" }
matter-effects = { path = "../matter-effects" }
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
petgraph = "0.6"

[lib]
crate-type = ["cdylib", "rlib"]
