[package]
name = "matter-bridge-go-native"
version = "0.1.0"
edition = "2021"
authors = ["Matter Core Team"]
license = "MIT"

[dependencies]
matter-backend = { path = "../matter-backend" }
matter-error = { path = "../matter-error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = { version = "0.8", optional = true }
libc = { version = "0.2", optional = true }

[features]
default = []
cgo-native = ["dep:libloading", "dep:libc"]

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
