[package]
name = "matter-bridge-go"
version = "0.1.0"
edition = "2021"

[dependencies]
matter-backend = { path = "../matter-backend" }
matter-polyglot = { path = "../matter-polyglot" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"

[dev-dependencies]
tempfile = "3.8"
