[package]
name = "matter-bridge-java-native"
version = "0.1.0"
edition = "2021"
authors = ["Matter Core Team"]
license = "MIT"

[dependencies]
matter-backend = { path = "../matter-backend" }
matter-error = { path = "../matter-error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = { version = "0.21", features = ["invocation"], optional = true }

[features]
default = []
jni-native = ["dep:jni"]

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
