[package]
name = "matter-bridge-nodejs-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
matter-backend = { path = "../matter-backend" }
matter-polyglot = { path = "../matter-polyglot" }
napi = "2.13"
napi-derive = "2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

