[package]
name = "matter-bridge-nodejs"
version = "0.1.0"
edition = "2021"

[dependencies]
matter-backend = { path = "../matter-backend" }
matter-polyglot = { path = "../matter-polyglot" }
# napi-rs seria usado aqui, mas vamos fazer uma implementação simplificada primeiro
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
