[package]
name = "matter-bridge-python"
version = "0.1.0"
edition = "2021"

[dependencies]
matter-backend = { path = "../matter-backend" }
matter-polyglot = { path = "../matter-polyglot" }
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py37"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
