[package]
name = "matter-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "matter-cli"
path = "src/main.rs"

[features]
default = []
llvm = []

[dependencies]
matter-lexer = { workspace = true }
matter-parser = { workspace = true }
matter-ast = { workspace = true }
matter-bytecode = { workspace = true }
matter-vm = { workspace = true }
matter-runtime = { workspace = true }
matter-backend = { workspace = true }
matter-lsp = { workspace = true }
matter-debugger = { workspace = true }
matter-formatter = { workspace = true }
matter-linter = { workspace = true }
matter-native = { path = "../matter-native" }
matter-sentinel-abi = { workspace = true }
matter-kernel-vm = { workspace = true }
matter-bridge-rust = { path = "../matter-bridge-rust" }
matter-polyglot = { path = "../matter-polyglot" }
emnr-matter-bridge = { path = "../../emnr/crates/emnr-matter-bridge" }
emnr-region = { path = "../../emnr/crates/emnr-region" }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread"] }
serde_json = "1"
