[package]
name = "matter-cli"
version.workspace = true
edition.workspace = true

# Phase 1 binary isolation
# default bin: language-only (`matter-cli`)
# experimental bin: full stack (`matter-cli-experimental`, requires --features experimental-full)

[[bin]]
name = "matter-cli"
path = "src/language_main.rs"

[[bin]]
name = "matter-cli-experimental"
path = "src/main.rs"
required-features = ["experimental-full"]

[features]
default = ["language-only", "jit-exec"]
language-only = []
polyglot = ["matter-runtime/polyglot", "dep:matter-polyglot", "dep:matter-bridge-rust"]
visual = ["matter-runtime/visual"]
frontier = ["matter-runtime/frontier"]
device = ["matter-runtime/device"]
agent = ["matter-runtime/agent"]
net = ["matter-runtime/net"]
lsp = ["dep:matter-lsp", "dep:tokio"]
debugger-tools = ["dep:matter-debugger", "dep:matter-formatter", "dep:matter-linter"]
native-tools = ["dep:matter-native"]
emnr = ["dep:emnr-matter-bridge", "dep:emnr-region"]
jit-exec = ["matter-vm/jit-exec"]
llvm = []
experimental-full = [
    "polyglot",
    "visual",
    "frontier",
    "device",
    "agent",
    "net",
    "lsp",
    "debugger-tools",
    "native-tools",
    "emnr",
    "jit-exec",
]

[dependencies]
matter-lexer = { workspace = true }
matter-parser = { workspace = true }
matter-ast = { workspace = true }
matter-bytecode = { workspace = true }
matter-vm = { workspace = true }
# language-only runtime by default (no python/visual/device/frontier)
matter-runtime = { workspace = true }
matter-stdlib = { workspace = true }
matter-backend = { workspace = true }
matter-sentinel-abi = { workspace = true }
matter-kernel-vm = { workspace = true }
serde_json = "1"

# Optional stacks for experimental-full binary only
matter-lsp = { workspace = true, optional = true }
matter-debugger = { workspace = true, optional = true }
matter-formatter = { workspace = true, optional = true }
matter-linter = { workspace = true, optional = true }
matter-native = { path = "../matter-native", optional = true }
matter-bridge-rust = { path = "../matter-bridge-rust", optional = true }
matter-polyglot = { path = "../matter-polyglot", optional = true }
emnr-matter-bridge = { path = "../../emnr/crates/emnr-matter-bridge", optional = true }
emnr-region = { path = "../../emnr/crates/emnr-region", optional = true }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread"], optional = true }
