[package]
name = "matter-crash-reporter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
matter-ast = { workspace = true }
matter-error = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
backtrace = "0.3"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
