[package]
name = "matter-debugger"
version = "0.6.0"
edition = "2021"

[dependencies]
matter-vm = { path = "../matter-vm" }
matter-bytecode = { path = "../matter-bytecode" }
matter-ast = { path = "../matter-ast" }
matter-backend = { path = "../matter-backend" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
