[package]
name = "matter-deployment"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
matter-ast = { workspace = true }
matter-error = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
