[package]
name = "matter-jit"
version = "0.1.0"
edition = "2021"
description = "Just-In-Time compilation infrastructure for Matter Core"

[dependencies]
matter-ast = { path = "../matter-ast" }
matter-bytecode = { path = "../matter-bytecode" }
matter-native = { path = "../matter-native" }
matter-backend = { path = "../matter-backend" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
