[package]
name = "matter-leak-detector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
matter-ast = { workspace = true }
matter-error = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
petgraph = "0.6"  # For cycle detection

[dev-dependencies]
criterion = "0.5"
