[package]
name = "matter-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
matter-ast = { path = "../matter-ast" }
matter-bytecode = { path = "../matter-bytecode" }
matter-error = { path = "../matter-error" }
inkwell = { version = "0.4", features = ["llvm17-0"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
llvm-sys = ["dep:inkwell"]
