[package]
name = "matter-lsp"
version = "0.5.0"
edition = "2021"

[dependencies]
matter-lexer = { path = "../matter-lexer" }
matter-parser = { path = "../matter-parser" }
matter-ast = { path = "../matter-ast" }
matter-error = { path = "../matter-error" }
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
