[package]
name = "matter-lsp"
version = "0.5.0"
edition = "2021"
description = "Matter Language Server Protocol (stdio) — language-only Core surface"
publish = false

# Versioned delivery binary (independent of matter-cli language-only).
[[bin]]
name = "matter-lsp"
path = "src/main.rs"

[dependencies]
matter-lexer = { path = "../matter-lexer" }
matter-parser = { path = "../matter-parser" }
matter-ast = { path = "../matter-ast" }
matter-bytecode = { path = "../matter-bytecode" }
matter-error = { path = "../matter-error" }
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
