[package]
name = "matter-memristive"
version = "0.1.0"
edition = "2021"
authors = ["Matter Core Team"]
description = "Memristive computing support for Matter - resistive memory and neuromorphic computing"
license = "MIT"
repository = "https://github.com/matter-lang/matter"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
