[package]
name = "matter-neuromorphic"
version = "0.1.0"
edition = "2021"
authors = ["Matter Team <team@matter-lang.org>"]
description = "Neuromorphic computing for Matter"
license = "MIT"
repository = "https://github.com/matter-lang/matter"

[dependencies]
matter-core = { path = "../.." }
matter-types = { path = "../matter-types" }
ndarray = "0.15"
rayon = "1.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
