[package]
name = "matter-polyglot"
version = "0.1.0"
edition = "2021"

[dependencies]
matter-ast = { path = "../matter-ast" }
matter-backend = { path = "../matter-backend" }
matter-error = { path = "../matter-error" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
toml = "0.8"
